test/integration/test_options/style/plot/backgroundColor/error/invalid_color-hex_digit_1.mjs
import Chart from "/test/integration/test_options/style/plot/backgroundColor/chart.js";


const testSteps = [
    Chart.static("#ABCDEG")
]


export default testSteps
